force-app/main/default/objects/ConfigurationTable__c/ConfigurationTable__c.object-meta.xml
<CustomObject>
    <label>Configuration Table</label>
    <nameField>
        <label>Configuration Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>