force-app/main/default/objects/ConfigurationTable__c/fields/LLM__c.field-meta.xml
<CustomField>
    <fullName>LLM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LLM</label>
    <referenceTo>LLM__c</referenceTo>
    <relationshipLabel>Configuration Tables</relationshipLabel>
    <relationshipName>Configuration_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>