force-app/main/default/objects/ConfigurationTable__c/fields/PromptLibrary__c.field-meta.xml
<CustomField>
    <fullName>PromptLibrary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt Library</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Phase__c</field>
            <operation>equals</operation>
            <valueField>PromptLibrary__c.Phase__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PromptLibrary__c</referenceTo>
    <relationshipLabel>Configuration Tables</relationshipLabel>
    <relationshipName>Configuration_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>