force-app/main/default/objects/ConfigurationTable__c/fields/Sub_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Action_Name__c</fullName>
    <label>Sub Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>